<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_username"> User Name </string>
    <string name="title_login_username_hint">Enter your User Name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_password_hint"> </string>
    <string name="title_login_save_login_infor">Save Login Infor</string>
    <string name="title_login_button_login"> Login </string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare"> Healthcare </string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight:</string>
    <string name="txt_result" />
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat </string>
    <string name="title_product">Product</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_new_customer">New Customer\n</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail\n</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name</string>
    <string name="title_customer_email">Customer Email</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">NEW</string>
    <string name="title_save">SAVE</string>
    <string name="title_remove">REMOVE</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_cate_id">Product Cate ID:</string>
    <string name="title_product_description">Product Description:</string>
    <string name="title_product_image_id">Product Image ID</string>
    <string name="title_new_product">New Product</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_order">Order</string>
    <string name="title_orders">Orders</string>
</resources>